--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/svg+xml" href="../public/images/FLATICON.svg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="./logo.css" rel="stylesheet">
     <title>Maam Houses</title>
 </head>
 <body>
