--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/svg+xml" href="../public/images/FLATICON.svg">
+    <link rel="icon" type="image/svg+xml" href="./public/images/LOGO_MAAM.svg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="./logo.css" rel="stylesheet">
     <title>Maam Houses</title>
 </head>
 <body>
